# Tweet-Scraper-With-Sentiment-Analysis

./: .gitignore  LICENSE  README.md  setup.cfg
src/: .scraper.py.swp  data_access_object.py  main.py  naive_bayes.py  scraped_tweets.xlsx  scraper.py  scraper_manager.py  tweet.py  tweetDAO.py  tweetScraper.py  tweet_dao.py  utility.py
