[metadata]
name = TweetScraper-samcdonovan
version = 0.0.1
author = Samuel Donovan
author_email = samcdonovan@gmail.com 
description = Tweet Scraper with Sentiment Analysis, Final Year Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samcdonovan/TweetScraperWithSentimentAnalysis
project_urls =
    Bug Tracker = https://github.com/samcdonovan/TweetScraperWithSentimentAnalysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src